# pdf-merge-tool

./: .gitignore  CHANGELOG.md  CHANGELOG_DEV.md  README.md  package-lock.json  package.json
backend/: .env  .env.example  pyproject.toml
backend/src/pdf_tools/: __init__.py  cli.py  exceptions.py  main.py
backend/src/pdf_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/pdf_tools/api/: __init__.py  models.py  session_store.py
backend/src/pdf_tools/auth/: __init__.py  dependencies.py  jwt_tokens.py  routes.py  session_user.py  settings.py
backend/src/pdf_tools/auth/providers/: __init__.py  base.py  ldap.py  registry.py
backend/src/pdf_tools/core/: __init__.py  page_config.py  pdf_extractor.py  pdf_merger.py  pdf_reader.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_page_config.py  test_pdf_extractor.py  test_pdf_merger.py  test_pdf_reader.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthGate.tsx  ChangelogSheet.tsx  FileList.tsx  MergeButton.tsx  OutputConfig.tsx  PageConfigInput.tsx  UploadZone.tsx  WizardStepper.tsx
frontend/src/hooks/: useMerge.ts  useUpload.ts
frontend/src/lib/: apiBase.ts  apiClient.ts  pageSpec.ts  wizardSteps.ts
openspec/: config.yaml
openspec/changes/enable-ldap-login/: tasks.md
openspec/changes/pdf-merge-tool/: tasks.md
openspec/specs/app-changelog/: spec.md
openspec/specs/auth-ldap/: spec.md
openspec/specs/auth-providers/: spec.md
(+48 files in other folders)
